# spaal2-template

./: .gitmodules  README.md  main.py  pyproject.toml
